Fix "back" FR traduction (#858)
Co-authored-by: Sean Morley <98704938+seanmorley15@users.noreply.github.com>

--- a/frontend/src/locales/fr.json
+++ b/frontend/src/locales/fr.json
@@ -290,7 +290,7 @@
     "average_cadence": "Cadence moyenne",
     "average_speed": "Vitesse moyenne",
     "avg_speed": "Vitesse moyenne",
-    "back": "Dos",
+    "back": "Retour",
     "cadence": "Cadence",
     "calories": "Calories",
     "click_map": "Cliquez sur la carte pour sélectionner un emplacement",
