Small fix to italian text in dashboard

--- a/frontend/src/locales/it.json
+++ b/frontend/src/locales/it.json
@@ -913,8 +913,8 @@
     "total_visited_cities": "Totale città visitate",
     "document_some_adventures": "Inizia a documentare i tuoi viaggi e costruisci la tua mappa di avventura personale!",
     "view_all": "Visualizza tutto",
-    "welcome_text_1": "Sei stato acceso",
-    "welcome_text_2": "Avventure finora",
+    "welcome_text_1": "Sei stato in",
+    "welcome_text_2": "avventure finora",
     "welcome_text_3": "Continua a esplorare e documentare i tuoi viaggi!"
   },
   "immich": {
