Update localization files to replace "adventure" with "location" for consistency across the application

--- a/frontend/src/locales/en.json
+++ b/frontend/src/locales/en.json
@@ -1,6 +1,6 @@
 {
   "navbar": {
-    "adventures": "Adventures",
+    "adventures": "Locations",
     "collections": "Collections",
     "worldtravel": "World Travel",
     "map": "Map",
@@ -8,7 +8,7 @@
     "search": "Search",
     "profile": "Profile",
     "greeting": "Hi",
-    "my_adventures": "My Adventures",
+    "my_adventures": "My Locations",
     "my_tags": "My Tags",
     "tag": "Tag",
     "shared_with_me": "Shared With Me",
@@ -95,7 +95,7 @@
     "delete_transportation": "Delete Transportation",
     "delete_lodging": "Delete Lodging",
     "open_details": "Open Details",
-    "edit_adventure": "Edit Adventure",
+    "edit_adventure": "Edit Location",
     "edit_location": "Edit Location",
     "remove_from_collection": "Remove from Collection",
     "add_to_collection": "Add to Collection",
@@ -114,7 +114,7 @@
     "copy_coordinates": "Copy Coordinates",
     "visits": "Visits",
     "create_new": "Create New...",
-    "adventure": "Adventure",
+    "adventure": "Location",
     "count_txt": "results matching your search",
     "sort": "Sort",
     "order_by": "Order By",
@@ -146,8 +146,8 @@
     "wikipedia": "Wikipedia",
     "add_notes": "Add notes",
     "warning": "Warning",
-    "my_adventures": "My Adventures",
-    "no_linkable_adventures": "No adventures found that can be linked to this collection.",
+    "my_adventures": "My Locations",
+    "no_linkable_adventures": "No locations found that can be linked to this collection.",
     "add": "Add",
     "save_next": "Save & Next",
     "end_date": "End Date",
@@ -171,7 +171,7 @@
     "links": "Links",
     "description": "Description",
     "sources": "Sources",
-    "collection_adventures": "Include Collection Adventures",
+    "collection_adventures": "Include Collection Locations",
     "collection_locations": "Include Collection Locations",
     "filter": "Filter",
     "category_filter": "Category Filter",
@@ -185,15 +185,15 @@
     "public": "Public",
     "archived": "Archived",
     "name_location": "name, location",
-    "loading_adventures": "Loading adventures...",
-    "all_adventures_already_linked": "All adventures are already linked to this collection.",
+    "loading_adventures": "Loading locations...",
+    "all_adventures_already_linked": "All locations are already linked to this collection.",
     "edit_collection": "Edit Collection",
     "unarchive": "Unarchive",
     "archive": "Archive",
     "no_collections_to_add_location": "No collections found to add this location to.",
-    "create_collection_first": "Create a collection first to organize your adventures and memories.",
+    "create_collection_first": "Create a collection first to organize your locations and memories.",
     "done": "Done",
-    "adventures_available": "Adventures Available",
+    "adventures_available": "Locations Available",
     "collections_linked": "Collections Linked",
     "not_visited": "Not Visited",
     "archived_collection_message": "Collection archived successfully!",
@@ -217,7 +217,7 @@
     "wiki_image_error": "Error fetching image from Wikipedia",
     "start_before_end_error": "Start date must be before end date",
     "actions": "Actions",
-    "see_adventures": "See Adventures",
+    "see_adventures": "See Locations",
     "image_fetch_failed": "Failed to fetch image",
     "no_location": "Please enter a location",
     "no_description_found": "No description found",
@@ -233,19 +233,19 @@
     "basic_information": "Basic Information",
     "no_locations_to_recommendations": "No locations found. Add at least one location to get recommendations.",
     "display_name": "Display Name",
-    "adventure_not_found": "There are no adventures to display. Add some using the plus button at the bottom right or try changing filters!",
+    "adventure_not_found": "There are no locations to display. Add some using the plus button at the bottom right or try changing filters!",
     "collection_contents": "Collection Contents",
-    "no_adventures_found": "No adventures found",
+    "no_adventures_found": "No locations found",
     "no_locations_found": "No locations found",
-    "no_adventures_message": "Start documenting your adventures and planning new ones. Every journey has a story worth telling.",
+    "no_adventures_message": "Start documenting your locations and planning new ones. Every journey has a story worth telling.",
     "mark_visited": "Mark Visited",
     "error_updating_regions": "Error updating regions",
     "regions_updated": "regions updated",
     "cities_updated": "cities updated",
     "visited_region_check": "Visited Region Check",
-    "visited_region_check_desc": "By selecting this, the server will check all of your visited adventures and mark the regions they are located in as visited in world travel.",
+    "visited_region_check_desc": "By selecting this, the server will check all of your visited locations and mark the regions they are located in as visited in world travel.",
     "update_visited_regions": "Update Visited Regions",
-    "update_visited_regions_disclaimer": "This may take a while depending on the number of adventures you have visited.",
+    "update_visited_regions_disclaimer": "This may take a while depending on the number of locations you have visited.",
     "link_new": "Link New...",
     "add_new": "Add New...",
     "transportation": "Transportation",
@@ -256,11 +256,11 @@
     "collection_completed": "You've completed this collection!",
     "collection_stats": "Collection Stats",
     "keep_exploring": "Keep Exploring!",
-    "linked_adventures": "Linked Adventures",
+    "linked_adventures": "Linked Locations",
     "notes": "Notes",
     "checklists": "Checklists",
     "transportations": "Transportations",
-    "adventure_calendar": "Adventure Calendar",
+    "adventure_calendar": "Location Calendar",
     "visit_calendar": "Visit Calendar",
     "day": "Day",
     "itineary_by_date": "Itinerary by Date",
@@ -741,7 +741,7 @@
     "no_shared_collections": "No shared collections.",
     "shared_collections": "Shared Collections",
     "no_archived_collections": "No archived collections.",
-    "create_first": "Create your first collection to organize your adventures and memories.",
+    "create_first": "Create your first collection to organize your locations and memories.",
     "make_sure_public": "Make sure your profile is public so others can share with you.",
     "archived_appear_here": "Archived collections will appear here.",
     "linked": "Linked",
@@ -844,27 +844,27 @@
   },
   "search": {
     "adventurelog_results": "AdventureLog Results",
-    "public_adventures": "Public Adventures",
+    "public_adventures": "Public Locations",
     "online_results": "Online Results",
     "result": "Result",
     "results": "Results",
     "found": "found",
-    "try_searching_desc": "Try searching for adventures, collections, countries, regions, cities, or users.",
+    "try_searching_desc": "Try searching for locations, collections, countries, regions, cities, or users.",
     "countries": "Countries",
     "cities": "Cities"
   },
   "map": {
     "view_details": "View Details",
-    "adventure_map": "Adventure Map",
+    "adventure_map": "Location Map",
     "location_map": "Location Map",
     "map_options": "Map Options",
     "show_visited_regions": "Show Visited Regions",
-    "add_adventure_at_marker": "Add New Adventure at Marker",
+    "add_adventure_at_marker": "Add New Location at Marker",
     "add_location_at_marker": "Add New Location at Marker",
     "clear_marker": "Clear Marker",
-    "add_adventure": "Add New Adventure",
+    "add_adventure": "Add New Location",
     "add_location": "Add New Location",
-    "adventure_stats": "Adventure Stats",
+    "adventure_stats": "Location Stats",
     "map_controls": "Map Controls",
     "regions": "Regions",
     "completion": "Completion",
@@ -910,7 +910,7 @@
     "discovered": "discovered",
     "explored": "explored",
     "public_location_experiences": "Public location experiences",
-    "no_shared_adventures": "This user hasn't shared any public adventures yet.",
+    "no_shared_adventures": "This user hasn't shared any public locations yet.",
     "no_shared_collections": "This user hasn't shared any public collections yet."
   },
   "categories": {
@@ -927,16 +927,16 @@
   "dashboard": {
     "welcome_back": "Welcome back",
     "countries_visited": "Countries Visited",
-    "total_adventures": "Total Adventures",
+    "total_adventures": "Total Locations",
     "total_visited_regions": "Total Visited Regions",
     "total_visited_cities": "Total Visited Cities",
-    "recent_adventures": "Recent Adventures",
-    "no_recent_adventures": "No recent adventures?",
-    "add_some": "Why not start planning your next adventure? You can add a new adventure by clicking the button below.",
-    "document_some_adventures": "Start documenting your travels and build your personal adventure map!",
+    "recent_adventures": "Recent Locations",
+    "no_recent_adventures": "No recent locations?",
+    "add_some": "Why not start planning your next location? You can add a new location by clicking the button below.",
+    "document_some_adventures": "Start documenting your travels and build your personal location map!",
     "view_all": "View All",
     "welcome_text_1": "You've been on",
-    "welcome_text_2": "adventures so far",
+    "welcome_text_2": "locations so far",
     "welcome_text_3": "Keep exploring and documenting your travels!"
   },
   "immich": {
