--- a/frontend/src/locales/fr.json
+++ b/frontend/src/locales/fr.json
@@ -1,4 +1,4 @@
-{
+﻿{
   "about": {
     "about": "À propos",
     "close": "Fermer",
@@ -22,11 +22,11 @@
   "adventures": {
     "add_to_collection": "Ajouter à la collection",
     "delete": "Supprimer",
-    "edit_adventure": "Modifier l'aventure",
+  "edit_adventure": "Modifier le lieu",
     "no_image_found": "Aucune image trouvée",
     "open_details": "Ouvrir les détails",
     "remove_from_collection": "Supprimer de la collection",
-    "adventure": "Aventure",
+  "adventure": "Lieu",
     "archive": "Archiver",
     "archived": "Archivée",
     "archived_collection_message": "Collection archivée avec succès !",
@@ -36,9 +36,9 @@
     "category_filter": "Filtres de catégorie",
     "clear": "Réinitialiser",
     "collection": "Collection",
-    "collection_adventures": "Inclure les aventures liées à une collection",
+    "collection_adventures": "Inclure les lieux liés à une collection",
     "count_txt": "résultats correspondant à votre recherche",
-    "create_new": "Créer une nouvelle aventure...",
+    "create_new": "Créer un nouveau lieu...",
     "date": "Date",
     "dates": "Dates",
     "delete_collection": "Supprimer la collection",
@@ -102,25 +102,25 @@
     "save_next": "Sauvegarder",
     "search_for_location": "Rechercher un lieu",
     "search_results": "Résultats de la recherche",
-    "see_adventures": "Voir les aventures",
+  "see_adventures": "Voir les lieux",
     "start_date": "Date de début",
     "upload_image": "Télécharger une image",
     "url": "URL",
     "warning": "Avertissement",
     "wikipedia": "Wikipédia",
-    "adventure_not_found": "Il n'y a aucune aventure à afficher. \nAjoutez-en en utilisant le bouton '+' en bas à droite ou essayez de changer les filtres !",
+    "adventure_not_found": "Il n'y a aucun lieu à afficher. \nAjoutez-en en utilisant le bouton '+' en bas à droite ou essayez de changer les filtres !",
     "all": "Tous",
     "error_updating_regions": "Erreur lors de la mise à jour des régions",
     "mark_visited": "Marquer comme visité",
-    "my_adventures": "Mes aventures",
-    "no_adventures_found": "Aucune aventure trouvée",
-    "no_linkable_adventures": "Aucune aventure trouvée pouvant être liée à cette collection.",
+  "my_adventures": "Mes lieux",
+  "no_adventures_found": "Aucun lieu trouvé",
+  "no_linkable_adventures": "Aucun lieu trouvé pouvant être lié à cette collection.",
     "not_visited": "Non visitée",
     "regions_updated": "régions mises à jour",
     "update_visited_regions": "Mettre à jour les régions visitées",
-    "update_visited_regions_disclaimer": "Cela peut prendre un certain temps en fonction du nombre d'aventures que vous avez visitées.",
+    "update_visited_regions_disclaimer": "Cela peut prendre un certain temps en fonction du nombre de lieux que vous avez visités.",
     "visited_region_check": "Vérification de la région visitée",
-    "visited_region_check_desc": "En sélectionnant cette option, le serveur vérifiera toutes vos aventures visitées et marquera les régions correspondantes comme visitées dans la section 'Voyage dans le monde'.",
+    "visited_region_check_desc": "En sélectionnant cette option, le serveur vérifiera tous vos lieux visités et marquera les régions correspondantes comme visitées dans la section 'Voyage dans le monde'.",
     "add_new": "Ajouter un nouveau...",
     "checklists": "Listes de contrôle",
     "collection_archived": "Cette collection a été archivée.",
@@ -130,7 +130,7 @@
     "itineary_by_date": "Itinéraire trié par date",
     "keep_exploring": "Continuez à explorer !",
     "link_new": "Ajouter un lien vers...",
-    "linked_adventures": "Aventures liées",
+    "linked_adventures": "Lieux liés",
     "links": "Liens",
     "note": "Note",
     "notes": "Notes",
@@ -146,7 +146,7 @@
     "category_fetch_error": "Erreur lors de la récupération des catégories",
     "copied_to_clipboard": "Copié dans le presse-papier !",
     "copy_failed": "Échec de la copie",
-    "adventure_calendar": "Calendrier des aventures",
+    "adventure_calendar": "Calendrier des lieux",
     "emoji_picker": "Sélecteur d'émoticônes",
     "hide": "Cacher",
     "show": "Montrer",
@@ -171,7 +171,7 @@
     "to": "Vers",
     "transportation_delete_confirm": "Etes-vous sûr de vouloir supprimer ce transport ? \nCette action ne peut pas être annulée.",
     "cities_updated": "villes mises à jour",
-    "finding_recommendations": "Découvrir des trésors cachés pour votre prochaine aventure",
+    "finding_recommendations": "Découvrir des trésors cachés pour votre prochain lieu",
     "attachment": "Pièce jointe",
     "attachment_delete_success": "Pièce jointe supprimée avec succès !",
     "attachment_name": "Nom de la pièce jointe",
@@ -220,15 +220,15 @@
     "share_collection": "Partagez cette collection!",
     "filters_and_sort": "Filtres",
     "filters_and_stats": "Filtres",
-    "no_adventures_message": "Commencez à documenter vos aventures et à planifier de nouvelles. \nChaque voyage a une histoire qui mérite d'être racontée.",
+    "no_adventures_message": "Commencez à documenter vos lieux et à planifier de nouveaux. \nChaque voyage a une histoire qui mérite d'être racontée.",
     "travel_progress": "Progrès du voyage",
-    "adventures_available": "Aventures disponibles",
-    "all_adventures_already_linked": "Toutes les aventures sont déjà liées à cette collection.",
+    "adventures_available": "Lieux disponibles",
+    "all_adventures_already_linked": "Tous les lieux sont déjà liés à cette collection.",
     "collections_linked": "Collections liées",
-    "create_collection_first": "Créez d'abord une collection pour organiser vos aventures et vos souvenirs.",
+    "create_collection_first": "Créez d'abord une collection pour organiser vos lieux et vos souvenirs.",
     "delete_collection_warning": "Êtes-vous sûr de vouloir supprimer cette collection? \nCette action ne peut pas être annulée.",
     "done": "Fait",
-    "loading_adventures": "Chargement des aventures ...",
+    "loading_adventures": "Chargement des lieux ...",
     "name_location": "nom, emplacement",
     "collection_contents": "Contenu de la collection",
     "check_in": "Enregistrement",
@@ -428,16 +428,16 @@
   },
   "home": {
     "desc_1": "Découvrez, planifiez et explorez en toute simplicité",
-    "desc_2": "AdventureLog est conçu pour simplifier votre voyage, en vous fournissant les outils et les ressources nécessaires pour planifier, préparer et naviguer dans votre prochaine aventure inoubliable.",
+    "desc_2": "AdventureLog est conçu pour simplifier votre voyage, en vous fournissant les outils et les ressources nécessaires pour planifier, préparer et naviguer dans votre prochain lieu inoubliable.",
     "feature_1": "Carnet de voyage",
-    "feature_1_desc": "Gardez une trace de vos aventures avec un carnet de voyage personnalisé et partagez vos expériences avec vos amis et votre famille.",
+    "feature_1_desc": "Gardez une trace de vos lieux avec un carnet de voyage personnalisé et partagez vos expériences avec vos amis et votre famille.",
     "feature_2": "Planification du voyage",
     "feature_2_desc": "Créez facilement des itinéraires personnalisés et obtenez un aperçu quotidien de votre voyage.",
     "feature_3": "Carte de voyage",
     "feature_3_desc": "Visualisez vos voyages à travers le monde avec une carte interactive et explorez de nouvelles destinations.",
-    "go_to": "Aller au journal d'aventure",
-    "hero_1": "Découvrez les aventures les plus palpitantes du monde",
-    "hero_2": "Découvrez et planifiez votre prochaine aventure avec AdventureLog. \nExplorez des destinations à couper le souffle, créez des itinéraires personnalisés et restez connecté lors de vos déplacements.",
+    "go_to": "Aller au journal",
+    "hero_1": "Découvrez les lieux les plus palpitants du monde",
+    "hero_2": "Découvrez et planifiez votre prochain lieu avec AdventureLog. \nExplorez des destinations à couper le souffle, créez des itinéraires personnalisés et restez connecté lors de vos déplacements.",
     "key_features": "Principales fonctionnalités",
     "explore_world": "Explorer le monde",
     "latest_travel_experiences": "Vos dernières expériences de voyage",
@@ -446,13 +446,13 @@
   },
   "navbar": {
     "about": "À propos de AdventureLog",
-    "adventures": "Aventures",
+    "adventures": "Lieux",
     "collections": "Collections",
     "documentation": "Documentation",
-    "greeting": "Salut",
+    "collection_adventures": "Inclure les lieux liés à une collection",
     "logout": "Déconnexion",
-    "map": "Carte",
-    "my_adventures": "Mes aventures",
+    "create_new": "Créer un nouveau lieu...",
+    "my_adventures": "Mes lieux",
     "profile": "Profil",
     "search": "Recherche",
     "settings": "Paramètres",
@@ -578,7 +578,7 @@
     "spin_again": "Remonter",
     "spinning_globe": "Globe de rotation",
     "try_again": "Essayer à nouveau",
-    "your_random_adventure_awaits": "Votre aventure aléatoire vous attend!"
+    "your_random_adventure_awaits": "Votre lieu aléatoire vous attend!"
   },
   "settings": {
     "account_settings": "Paramètres du compte utilisateur",
@@ -759,7 +759,7 @@
     "public_collection": "Collection publique",
     "manage_collections": "Gérer les collections",
     "archived_appear_here": "Les collections archivées apparaîtront ici.",
-    "create_first": "Créez votre première collection pour organiser vos aventures et vos souvenirs.",
+    "create_first": "Créez votre première collection pour organiser vos lieux et vos souvenirs.",
     "make_sure_public": "Assurez-vous que votre profil est public afin que les autres puissent partager avec vous.",
     "no_archived_collections": "Aucune collection archivée.",
     "no_collections_yet": "Pas encore de collections",
@@ -822,23 +822,23 @@
   "search": {
     "adventurelog_results": "Résultats dans AdventureLog",
     "online_results": "Résultats en ligne",
-    "public_adventures": "Aventures publiques",
+    "public_adventures": "Lieux publics",
     "cities": "Villes",
     "countries": "Pays",
     "found": "trouvé",
     "result": "Résultat",
     "results": "Résultats",
-    "try_searching_desc": "Essayez de rechercher des aventures, des collections, des pays, des régions, des villes ou des utilisateurs."
+    "try_searching_desc": "Essayez de rechercher des lieux, des collections, des pays, des régions, des villes ou des utilisateurs."
   },
   "map": {
-    "add_adventure": "Ajouter une nouvelle aventure",
-    "add_adventure_at_marker": "Ajouter une nouvelle aventure au marqueur",
-    "adventure_map": "Carte des aventures",
+    "add_adventure": "Ajouter un nouveau lieu",
+    "add_adventure_at_marker": "Ajouter un nouveau lieu au marqueur",
+    "adventure_map": "Carte des lieux",
     "clear_marker": "Effacer le marqueur",
     "map_options": "Options de la carte",
     "show_visited_regions": "Afficher les régions visitées",
     "view_details": "Afficher les détails",
-    "adventure_stats": "Statistiques d'aventure",
+    "adventure_stats": "Statistiques de lieux",
     "completion": "Achèvement",
     "display_options": "Options d'affichage",
     "map_controls": "Contrôles de cartes",
@@ -882,11 +882,11 @@
     "visited_cities": "Villes visitées",
     "discovered": "découvert",
     "explored": "exploré",
-    "no_shared_adventures": "Cet utilisateur n'a encore partagé aucune aventure publique.",
+    "no_shared_adventures": "Cet utilisateur n'a encore partagé aucun lieu public.",
     "no_shared_collections": "Cet utilisateur n'a pas encore partagé de collections publiques.",
     "planned_trips": "Voyages prévus",
     "travel_statistics": "Statistiques de voyage",
-    "your_journey_at_a_glance": "Votre voyage d'aventure en un coup d'œil",
+    "your_journey_at_a_glance": "Votre voyage en un coup d'œil",
     "public_location_experiences": "Expériences de localisation publique"
   },
   "categories": {
@@ -901,18 +901,18 @@
     "location_update_after_refresh": "Les cartes de localisation seront mises à jour une fois que vous avez actualisé la page."
   },
   "dashboard": {
-    "add_some": "Pourquoi ne pas commencer à planifier votre prochaine aventure ? \nVous pouvez ajouter une nouvelle aventure en cliquant sur le bouton ci-dessous.",
+    "add_some": "Pourquoi ne pas commencer à planifier votre prochain lieu ? \nVous pouvez ajouter un nouveau lieu en cliquant sur le bouton ci-dessous.",
     "countries_visited": "Pays visités",
-    "no_recent_adventures": "Pas d'aventure récente ?",
-    "recent_adventures": "Aventures récentes",
-    "total_adventures": "Aventures totales",
+    "no_recent_adventures": "Pas de lieu récent ?",
+    "recent_adventures": "Lieux récents",
+    "total_adventures": "Lieux totaux",
     "total_visited_regions": "Total des régions visitées",
     "welcome_back": "Content de te revoir",
     "total_visited_cities": "Total des villes visitées",
-    "document_some_adventures": "Commencez à documenter vos voyages et construisez votre carte d'aventure personnelle!",
+    "document_some_adventures": "Commencez à documenter vos voyages et construisez votre carte personnelle!",
     "view_all": "Afficher tous",
     "welcome_text_1": "Tu as été sur",
-    "welcome_text_2": "Aventures jusqu'à présent",
+    "welcome_text_2": "Lieux jusqu'à présent",
     "welcome_text_3": "Continuez à explorer et à documenter vos voyages!"
   },
   "immich": {
