Update translation for 'back' in Dutch locale

--- a/frontend/src/locales/nl.json
+++ b/frontend/src/locales/nl.json
@@ -291,7 +291,7 @@
     "average_cadence": "Gemiddelde cadans",
     "average_speed": "Gemiddelde snelheid",
     "avg_speed": "Gemiddelde snelheid",
-    "back": "Rug",
+    "back": "Terug",
     "cadence": "Cadans",
     "calories": "Calorieën",
     "click_map": "Klik op de kaart om een locatie te selecteren",
