--- a/frontend/src/locales/en.json
+++ b/frontend/src/locales/en.json
@@ -550,7 +550,10 @@
     "spin_again": "Spin Again",
     "globe_spin_error_desc": "Error fetching globe spin data",
     "try_again": "Try Again",
-    "no_globe_spin_data": "No Globe Spin Data"
+    "no_globe_spin_data": "No Globe Spin Data",
+    "show_less": "Show Less",
+    "show_more": "Show More",
+    "about_country": "About Country"
   },
   "auth": {
     "username": "Username",
