Add new translations for Chinese and Ukrainian locales
- Updated zh.json to include new keys: "about_country", "about_region", "show_less", and "show_more".
- Registered Ukrainian locale in +layout.svelte and added it to the locales array.

--- a/frontend/src/locales/ar.json
+++ b/frontend/src/locales/ar.json
@@ -1034,6 +1034,10 @@
     "spin_again": "تدور مرة أخرى",
     "spinning_globe": "كرة الغزل",
     "try_again": "حاول ثانية",
-    "your_random_adventure_awaits": "مغامرتك العشوائية تنتظر!"
+    "your_random_adventure_awaits": "مغامرتك العشوائية تنتظر!",
+    "about_country": "حول البلد",
+    "about_region": "حول المنطقة",
+    "show_less": "عرض أقل",
+    "show_more": "عرض المزيد"
   }
 }
