--- a/frontend/src/locales/hu.json
+++ b/frontend/src/locales/hu.json
@@ -550,7 +550,11 @@
     "spin_again": "Forgatás újra",
     "globe_spin_error_desc": "Hiba történt a földgömb adatainak lekérésekor",
     "try_again": "Próbáld újra",
-    "no_globe_spin_data": "Nincsenek földgömb adatok"
+    "no_globe_spin_data": "Nincsenek földgömb adatok",
+    "about_country": "Országról",
+    "about_region": "A régióról",
+    "show_less": "Mutass kevesebbet",
+    "show_more": "Továbbiak megjelenítése"
   },
   "auth": {
     "username": "Felhasználónév",
@@ -789,36 +793,36 @@
     "add_your_first_item": "Add hozzá az első elemedet"
   },
   "transportation": {
-  "transportation_deleted": "Szállítás sikeresen törölve!",
-  "transportation_delete_error": "Hiba a szállítás törlésekor",
-  "type": "Típus",
-  "new_transportation": "Új szállítás",
-  "flight_number": "Járatszám",
-  "from_location": "Kiindulási hely",
-  "to_location": "Célállomás",
-  "fetch_location_information": "Helyszíninformáció lekérése",
-  "starting_airport_desc": "Add meg a kiindulási repülőtér kódját (pl.: JFK)",
-  "ending_airport_desc": "Add meg a cél repülőtér kódját (pl.: LAX)",
-  "edit": "Szerkesztés",
-  "modes": {
-    "car": "Autó",
-    "plane": "Repülő",
-    "train": "Vonat",
-    "bus": "Busz",
-    "boat": "Hajó",
-    "bike": "Kerékpár",
-    "walking": "Gyalog",
-    "other": "Egyéb"
-  },
-  "edit_transportation": "Szállítás szerkesztése",
-  "update_transportation_details": "Szállítási adatok frissítése",
-  "create_new_transportation": "Új szállítás létrehozása",
-  "enter_transportation_name": "Add meg a szállítás nevét",
-  "select_type": "Válassz típust",
-  "enter_link": "Adj meg egy hivatkozást",
-  "enter_flight_number": "Add meg a járatszámot",
-  "enter_from_location": "Add meg a kiindulási helyet",
-  "enter_to_location": "Add meg a célállomást"
+    "transportation_deleted": "Szállítás sikeresen törölve!",
+    "transportation_delete_error": "Hiba a szállítás törlésekor",
+    "type": "Típus",
+    "new_transportation": "Új szállítás",
+    "flight_number": "Járatszám",
+    "from_location": "Kiindulási hely",
+    "to_location": "Célállomás",
+    "fetch_location_information": "Helyszíninformáció lekérése",
+    "starting_airport_desc": "Add meg a kiindulási repülőtér kódját (pl.: JFK)",
+    "ending_airport_desc": "Add meg a cél repülőtér kódját (pl.: LAX)",
+    "edit": "Szerkesztés",
+    "modes": {
+      "car": "Autó",
+      "plane": "Repülő",
+      "train": "Vonat",
+      "bus": "Busz",
+      "boat": "Hajó",
+      "bike": "Kerékpár",
+      "walking": "Gyalog",
+      "other": "Egyéb"
+    },
+    "edit_transportation": "Szállítás szerkesztése",
+    "update_transportation_details": "Szállítási adatok frissítése",
+    "create_new_transportation": "Új szállítás létrehozása",
+    "enter_transportation_name": "Add meg a szállítás nevét",
+    "select_type": "Válassz típust",
+    "enter_link": "Adj meg egy hivatkozást",
+    "enter_flight_number": "Add meg a járatszámot",
+    "enter_from_location": "Add meg a kiindulási helyet",
+    "enter_to_location": "Add meg a célállomást"
   },
   "lodging": {
     "new_lodging": "Új szállás",
